[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=60",
  "setuptools-scm>=8",
]

[project]
name = "hysetter"
description = "Subset hydroclimate data using HyRiver Over CONUS."
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "boto3",
  "dask[dataframe]",
  "flox",
  "geopandas",
  "numba",
  "numbagg",
  "pandas",
  "planetary-computer",
  "py3dep>=0.16.3",
  "pyarrow>=1.0.1",
  "pydantic>=2.7.1",
  "pydaymet>=0.16.3",
  "pygeohydro>=0.16.4",
  "pygridmet>=0.16",
  "pynhd>=0.16.3",
  "pynldas2>=0.16",
  "pyogrio",
  "pystac-client",
  "pyyaml",
  "rich-click>=1.8.2",
  "typing-extensions",
  "xarray>=2024.5",
  "xarray-spatial",
]
optional-dependencies.test = [
  "pytest-cov",
  "pytest-sugar",
  "pytest-xdist[psutil]",
]
urls.Changelog = "https://docs.hyriver.io/changelogs/hysetter.html"
urls.CI = "https://github.com/hyriver/hysetter/actions"
urls.Homepage = "https://docs.hyriver.io/readme/hysetter.html"
urls.Issues = "https://github.com/hyriver/hysetter/issues"
scripts.hysetter = "hysetter.cli:cli"

[tool.setuptools]
include-package-data = true
license-files = [
  "LICENSE",
]
platforms = [
  "any",
]
zip-safe = false

[tool.setuptools.package-data]
hysetter = [
  "py.typed",
]

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools_scm]
fallback_version = "999"

[tool.ruff]
target-version = "py310"
line-length = 100

exclude = [
  ".nox",
  "__pycache__",
]

format.docstring-code-format = true
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TCH",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [
  # docstring in class __init__
  "D107",
  # long too long, let the formatter handle it
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  # too many arguments
  "PLR0913",
  # custom exceptions
  "TRY003",
]

lint.per-file-ignores."tests/*.py" = [
  # Disable all docstring checks in tests
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # magic values
  "PLR2004",
  # Mutable class attributes
  "RUF012",
  # use of "assert"
  "S101",
  # possible hardcoded password
  "S106",
]
lint.extend-safe-fixes = [
  # absolute imports
  "TID252",
]
lint.isort.known-first-party = [
  "hysetter",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox"
ignore-words-list = "gage,gages"

[tool.pytest.ini_options]
addopts = "-n=auto -v --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*numpy.ndarray size changed.*",
]
testpaths = [
  "tests",
  "hysetter",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/print_versions.py",
]
parallel = true
source = [
  "hysetter",
]

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/",
]
include = [
  "hysetter",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"

[tool.fixit]
formatter = "ufmt"

[tool.refurb]
python_version = "3.10"
quiet = true
