[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "hysetter"
description = "Subset hydroclimate data using HyRiver Over CONUS."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "boto3",
  "dask-expr",
  "geopandas>=1",
  "pandas>=2",
  "planetary-computer",
  "pyarrow>=1.0.1",
  "pydantic>=2.7.1",
  "pydaymet>=0.19.4,<0.20",
  "pygeohydro>=0.19,<0.20",
  "pygridmet>=0.19,<0.20",
  "pynhd>=0.19.4,<0.20",
  "pynldas2>=0.19,<0.20",
  "pystac-client",
  "pyyaml",
  "rich-click>=1.8.2",
  "seamless-3dep>=0.3",
  "typing-extensions",
  "xarray>=2024.5",
  "xarray-spatial",
]
optional-dependencies.dev = [
  "flox",
  "hydrosignatures>=0.19,<0.20",
  "ipykernel",
  "ipywidgets",
  "mapclassify",
  "matplotlib",
  "notebook",
  "numba",
  "numbagg",
  "pytest",
  "salib",
  "sceua",
]
optional-dependencies.docs = [
  "black",
  "mkdocs",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocs-minify-plugin",
  "mkdocstrings-python",
]
optional-dependencies.lint = [
  "codespell",
  "pre-commit",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-sugar",
]
optional-dependencies.typecheck = [
  "pyright",
]
urls.Changelog = "https://hysetter.readthedocs.io/latest/CHANGELOG"
urls.CI = "https://github.com/hyriver/hysetter/actions"
urls.Homepage = "https://hysetter.readthedocs.io"
urls.Issues = "https://github.com/hyriver/hysetter/issues"
scripts.hysetter = "hysetter.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/hysetter",
]

[tool.ruff]
target-version = "py39"
line-length = 100

exclude = [
  ".pixi",
  "__pycache__",
]

lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # refurb
  "FURB",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # compatibility with numpy 2.0
  "NPY201",
  # Perflint
  "PERF",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TC",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [
  "D103",
  "D105",
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  # specific type error ignored
  "PGH003",
  # top level imports
  "PLC0415",
  "PLR0913",
  "PLR2004",
  # url schema
  "S310",
  "S603",
  # shell command
  "S605",
  "S607",
  # custom exception
  "TRY003",
]

lint.per-file-ignores."docs/examples/*.ipynb" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "T201",
]
lint.per-file-ignores."tests/*.py" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # specific type error ignored
  "PGH003",
  # use of "assert"
  "S101",
]

lint.extend-safe-fixes = [
  # module level imports
  "E402",
  # break down assert
  "PT018",
  # Move imports
  "TC",
  # absolute imports
  "TID252",
]
# Disallow all relative imports.
lint.flake8-tidy-imports.ban-relative-imports = "all"

lint.isort.known-first-party = [
  "hysetter",
]
lint.isort.required-imports = [ "from __future__ import annotations" ]

lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.pixi,pixi.lock,**.ipynb"
ignore-words-list = "gage,gages,Loos"

[tool.pytest.ini_options]
addopts = "-v --cov --junitxml=junit.xml --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  'raise ServiceUnavailableError',
  "if TYPE_CHECKING:",
]
ignore_errors = true
omit = [
  "**/__init__.py",
]

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]

[tool.coverage.run]
branch = true
parallel = true
source_pkgs = [
  "hysetter",
]

[tool.pyright]
exclude = [
  "**/__pycache__",
  "**/__init__.py",
]
include = [
  "src/hysetter",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
reportInvalidTypeForm = false
typeCheckingMode = "strict"

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs build --strict"
docs = "mkdocs serve"

[tool.pixi.project]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.pixi.pypi-dependencies]
hysetter = { path = ".", editable = true }

[tool.pixi.feature.py310.dependencies]
python = "~=3.10.0"
hdf5 = "*"
libnetcdf = "*"
# rasterio is not yet compatible with libgdal 3.11
libgdal-core = "<3.11"
tomli = "*"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
hdf5 = "*"
libnetcdf = "*"
# rasterio is not yet compatible with libgdal 3.11
libgdal-core = "<3.11"
tomli = "*"

[tool.pixi.environments]
dev = { features = [ "dev", "py313" ] }
test310 = { features = [ "test", "py310" ] }
test313 = { features = [ "test", "py313" ] }
typecheck = { features = [ "typecheck", "py313" ] }
lint = { features = [ "lint", "py313" ], no-default-feature = true }
docs = { features = [ "docs", "dev", "py313" ] }

[tool.pixi.feature.test.tasks]
test = "pytest"
report = { cmd = [ "coverage", "report" ], depends-on = [ "test" ] }
html = { cmd = [ "coverage", "html" ], depends-on = [ "test", "report" ] }

[tool.pixi.feature.lint.tasks]
lint = "pre-commit run --all-files"
pcupdate = "pre-commit autoupdate"
spell = "codespell -w"

[tool.pixi.feature.typecheck.tasks]
typecheck = "pyright"
